# DealFlow-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_config.yaml.example  architecture-spec.md  generate_memo.py  pyproject.toml  run_agents.py
agents/document_parser/: agent.py
agents/financial_analyst/: agent.py
agents/legal_risk/: agent.py
agents/orchestrator/: agent.py
agents/synthesis/: agent.py
agents/web_research/: agent.py
api/: main.py
components/: AgentMark.tsx
frontend/: agentmax-cover.html  index.html  logo-concepts.html
shared/: agent_config.py  models.py  pdf_memo.py  prompts.py
