[project]
name = "dealflow-ai"
version = "0.1.0"
description = "Multi-agent M&A due diligence platform built on Band"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[langgraph,crewai,pydantic-ai]",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "crewai>=0.80.0",
    "pydantic-ai>=0.0.14",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "reportlab>=4.2.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
